<resources>
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_app_button" translatable="false">Spotify Streamer</string>
    <string name="scores_app_button" translatable="false">Football Scores</string>
    <string name="library_app_button" translatable="false">Library</string>
    <string name="build_bigger_app_button" translatable="false">Build it Bigger</string>
    <string name="xyz_reader_app_button" translatable="false">XYZ Reader</string>
    <string name="capstone_app_button" translatable="false">Capstone</string>
    <string name="applist_header_label" translatable="false">My Nanodegree Apps!</string>
    <string name="app_main_header">My App Portfolio</string>
</resources>
