<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.karthik.udacitynd.sunshine.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header_label_text_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:text="@string/applist_header_label" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spotify_app_id"
        android:textSize="@dimen/button_text_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/buttonPrimary"
        android:text="@string/spotify_app_button"/>
    <Button
        android:id="@+id/football_scores_app_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        android:text="@string/scores_app_button"/>
    <Button
        android:id="@+id/library_app_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/buttonPrimary"
        android:text="@string/library_app_button"/>
    <Button
        android:id="@+id/build_bigger_app_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        android:text="@string/build_bigger_app_button"/>
    <Button
        android:id="@+id/xyz_reader_app_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/buttonPrimary"
        android:text="@string/xyz_reader_app_button"/>
    <Button
        android:id="@+id/capstone_app_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/capstone_app_button"/>


</LinearLayout>
</ScrollView>